--- a/5. Blurry Loading/styles.css
+++ b/5. Blurry Loading/styles.css
@@ -1,13 +1,13 @@
 /** @format */
 
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu");
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    font-family: "Roboto", sans-serif;
+    font-family: "Ubuntu", sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,4 +15,25 @@ body {
     height: 100vh;
     overflow: hidden;
     margin: 0;
+}
+
+.bg {
+    background: url("https://images.unsplash.com/photo-1677817019723-6691030e338c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8OXx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60")
+        no-repeat center center/cover;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+
+    /* For blurring */
+    filter: blur(0px);
+}
+
+.loading-text {
+    font-size: 50px;
+    color: #fff;
 }
